{{$NEXT}}

    - Added $pdf->version() get/set method.  When opening an existing
      PDF, the existing version number will now be retained.

    - Renamed openScalar to open_scalar in PDF::API2.  The old name
      still works but should be considered deprecated.

    - [RT #69503] Fix the -firstpage option to $pdf->preferences() so
      that it doesn't always lead to a crash (reported by Dietrich
      Streifert).

    - [RT #47974] Accept malformed xref subsections (with a warning)
      that have extraneous spaces on the first line (reported by
      Abhinav Kaushik).


2.021     2014-02-20

    - Fixed numerous bugs in the string parsing code, including the
      one reported in [RT #63918] by Frank Doepper.

    - [RT #41049] Rewrote literal string parsing to prevent a stack
      overflow due to an inefficient regex (reported by Sergei
      Fetisov).

    - [RT #91822] Fix compression of GIF images to ensure that output
      codes don't exceed 12 bits (reported by Vadim Repin).

    - The RunLengthDecode filter didn't actually work.  Its code has
      been rewritten and now passes basic encoding and decoding tests.

    - Fix Code128 barcode switching from Code C to Code B in certain
      cases (reported by Doru Petrescu).


2.020     2013-01-20

    - Give a more informative error message when a PDF file using a
      cross-reference stream is encountered.  The Known Issues section
      of the documentation includes pointers on how to add support in
      case someone else can get to this before I do.

    - Text using TrueType fonts is now searchable again.  In version
      0.61, an undocumented -unicodemap option was added to nearly all
      of the font resource methods, which only included a ToUnicode
      CMap if it was set (and it's required in order for PDF readers
      to be able to identify individual characters if BaseEncoding
      isn't present, which it isn't for TrueType fonts).
